<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/login_gradient_bg"
    android:orientation="vertical"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <com.editprofile.FontText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            custom:typefaceAsset="fonts/HarabaraFont.otf"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/whiteprofile"
            android:layout_marginTop="20dp"
            android:textSize="44sp"
            android:text="@string/WeValle" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/whiteprofile"
            android:textSize="17sp"
            android:text="@string/wevalletagline" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/ll_logo"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_login"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="45dp"
                android:background="@drawable/white_rounded_button"
                android:layout_marginRight="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/Login" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_register"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/white_rounded_button"
                android:layout_marginRight="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/Register" />
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>