<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="vertical">

            <include layout="@layout/header" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_header"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/forgottext"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_logo"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_username"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="25dp"

                    android:layout_marginRight="25dp">

                    <EditText
                        android:id="@+id/edt_emailaddress"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="20dp"
                        android:hint="@string/Emailaddress"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:textColor="#000000"
                        android:textSize="17sp" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/red_bg_with_rounded_corner">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerInParent="true"
                        android:text="@string/send"
                        android:textColor="#ffffff"
                        android:textSize="17sp" />
                </RelativeLayout>


            </LinearLayout>

        </RelativeLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_emailus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="email"
                android:gravity="center"
                android:text="@string/needhelp"
                android:textColor="#000000"
                android:textSize="15sp" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>